--- a/WEB-labs-With-Gulp/dest/views/index.html
+++ b/WEB-labs-With-Gulp/dest/views/index.html
@@ -64,12 +64,11 @@
         <p>14:01:30</p>
       </div>
     </div>
-    <div class="main_statistic">
-      <p>22.02.2019</p>
+    <div class="main_statistic"><span>22.02.2019</span>
       <div class="enter_form">
         <button class="clear_list">Clear List</button>
-        <input type="text" placeholder="What needs to be done?">
-        <input type="text" placeholder="Time to complete, example( 1:30 )">
+        <input type="text" placeholder="What needs to be done?" required>
+        <input type="text" placeholder="Time to complete, example( 1:30 )" required>
         <button class="add_to_todos">Add to Todos</button>
       </div>
     </div>
@@ -78,14 +77,35 @@
             <div class="info_list_block">
               <p class="text_todo">fixed bug</p>
               <p>Time to complete 3:00 h.</p>
-              <p>Time spend 1:30 h.</p>
+              <p>Time spend 3:30 h.</p>
             </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
           </div>
           <div class="single_list_block"><i class="far fa-check-circle"></i>
             <div class="info_list_block">
               <p class="text_todo">fix</p>
               <p>Time to complete 2:00 h.</p>
+              <p>Time spend 1:00 h.</p>
+            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
+          </div>
+          <div class="single_list_block"><i class="far fa-check-circle"></i>
+            <div class="info_list_block">
+              <p class="text_todo">Learn some course</p>
+              <p>Time to complete 3:00 h.</p>
+              <p>Time spend 0:30 h.</p>
+            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
+          </div>
+          <div class="single_list_block"><i class="far fa-check-circle"></i>
+            <div class="info_list_block">
+              <p class="text_todo">import styles in main project</p>
+              <p>Time to complete 0:30 h.</p>
               <p>Time spend 0:00 h.</p>
+            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
+          </div>
+          <div class="single_list_block"><i class="far fa-check-circle"></i>
+            <div class="info_list_block">
+              <p class="text_todo">fixed bug</p>
+              <p>Time to complete 3:00 h.</p>
+              <p>Time spend 1:30 h.</p>
             </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
           </div>
     </div>
