--- a/WEB-labs-With-Gulp/src/views/sections/days_block.pug
+++ b/WEB-labs-With-Gulp/src/views/sections/days_block.pug
@@ -1,4 +1,7 @@
 include ../components/mixins
 div.days_block
+  +one_day_block('fixed bug', '3:00', '3:30')
+  +one_day_block('fix', '2:00', '1:00')
+  +one_day_block('Learn some course', '3:00', '0:30')
+  +one_day_block('import styles in main project', '0:30', '0:00')
   +one_day_block('fixed bug', '3:00', '1:30')
-  +one_day_block('fix', '2:00', '0:00')
