--- a/WEB-labs-With-Gulp/src/views/sections/main_statistic.pug
+++ b/WEB-labs-With-Gulp/src/views/sections/main_statistic.pug
@@ -1,9 +1,9 @@
 div.main_statistic
-  p 22.02.2019
+  span 22.02.2019
   div.enter_form
     button.clear_list Clear List
-    input(type="text" placeholder="What needs to be done?")
-    input(type="text" placeholder="Time to complete, example( 1:30 )")
+    input(type="text" placeholder="What needs to be done?" required)
+    input(type="text" placeholder="Time to complete, example( 1:30 )" required)
     button.add_to_todos Add to Todos
 
     
