fixed_some_css_lab1

--- a/WEB-labs-With-Gulp/src/sass/_days_block.scss
+++ b/WEB-labs-With-Gulp/src/sass/_days_block.scss
@@ -32,6 +32,10 @@
   margin-top: 20px;
 }
 
+.single_list_block:hover {
+  background-color: #f4f4f4;
+}
+
 .info_list_block {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
