--- a/WEB-labs-With-Gulp/dest/css/index.css
+++ b/WEB-labs-With-Gulp/dest/css/index.css
@@ -236,6 +236,10 @@ body {
   margin-top: 20px;
 }
 
+.single_list_block:hover {
+  background-color: #f4f4f4;
+}
+
 .info_list_block {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
