--- a/WEB-labs-With-Gulp/dest/views/index.html
+++ b/WEB-labs-With-Gulp/dest/views/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
     <title>toggl</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Montserrat:300,400,500,700,800,900|Muli:300,400,600,700,800,900|Poppins:400,500,600,700,800" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/brands.css" integrity="sha384-1KLgFVb/gHrlDGLFPgMbeedi6tQBLcWvyNUN+YKXbD7ZFbjX6BLpMDf0PJ32XJfX" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/fontawesome.css" integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:900"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Montserrat:300,400,500,700,800,900|Muli:300,400,600,700,800,900|Poppins:400,500,600,700,800"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/brands.css"
+      integrity="sha384-1KLgFVb/gHrlDGLFPgMbeedi6tQBLcWvyNUN+YKXbD7ZFbjX6BLpMDf0PJ32XJfX"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/fontawesome.css"
+      integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="menu">
@@ -20,42 +44,53 @@
         <p>toggl</p>
       </div>
       <div class="main_list_menu">
-            <div class="menu_single_elements"><i class="far fa-clock"></i>
-              <p>Timer</p>
-            </div>
-            <div class="menu_single_elements"><i class="fas fa-chart-bar"></i>
-              <p>Dashboard</p>
-            </div>
-            <div class="menu_single_elements"><i class="fas fa-file-alt"></i>
-              <p>Reports</p>
-            </div>
-            <div class="menu_single_elements"><i class="fas fa-chart-line"></i>
-              <p>Insights</p>
-            </div>
-            <div class="menu_single_elements"><i class="far fa-star"></i>
-              <p>Saved Reports</p>
-            </div>
+        <div class="menu_single_elements">
+          <i class="far fa-clock"></i>
+          <p>Timer</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="fas fa-chart-bar"></i>
+          <p>Dashboard</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="fas fa-file-alt"></i>
+          <p>Reports</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="fas fa-chart-line"></i>
+          <p>Insights</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="far fa-star"></i>
+          <p>Saved Reports</p>
+        </div>
       </div>
       <div class="manage_menu">
         <h6>Manage</h6>
-            <div class="menu_single_elements"><i class="far fa-folder"></i>
-              <p>Projects</p>
-            </div>
-            <div class="menu_single_elements"><i class="fas fa-user"></i>
-              <p>Clients</p>
-            </div>
-            <div class="menu_single_elements"><i class="fas fa-users"></i>
-              <p>Team</p>
-            </div>
-            <div class="menu_single_elements"><i class="fas fa-briefcase"></i>
-              <p>Workspaces</p>
-            </div>
-            <div class="menu_single_elements"><i class="fas fa-tag"></i>
-              <p>Tags</p>
-            </div>
-            <div class="menu_single_elements"><i class="far fa-question-circle"></i>
-              <p>Help</p>
-            </div>
+        <div class="menu_single_elements">
+          <i class="far fa-folder"></i>
+          <p>Projects</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="fas fa-user"></i>
+          <p>Clients</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="fas fa-users"></i>
+          <p>Team</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="fas fa-briefcase"></i>
+          <p>Workspaces</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="fas fa-tag"></i>
+          <p>Tags</p>
+        </div>
+        <div class="menu_single_elements">
+          <i class="far fa-question-circle"></i>
+          <p>Help</p>
+        </div>
       </div>
     </div>
     <div class="top_part_of_functionals">
@@ -64,50 +99,65 @@
         <p>14:01:30</p>
       </div>
     </div>
-    <div class="main_statistic"><span>22.02.2019</span>
+    <div class="main_statistic">
+      <span>22.02.2019</span>
       <div class="enter_form">
         <button class="clear_list">Clear List</button>
-        <input type="text" placeholder="What needs to be done?" required>
-        <input type="text" placeholder="Time to complete, example( 1:30 )" required>
+        <input type="text" placeholder="What needs to be done?" required />
+        <input
+          type="text"
+          placeholder="Time to complete, example( 1:30 )"
+          required
+        />
         <button class="add_to_todos">Add to Todos</button>
       </div>
     </div>
     <div class="days_block">
-          <div class="single_list_block"><i class="far fa-check-circle"></i>
-            <div class="info_list_block">
-              <p class="text_todo">fixed bug</p>
-              <p>Time to complete 3:00 h.</p>
-              <p>Time spend 3:30 h.</p>
-            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
-          </div>
-          <div class="single_list_block"><i class="far fa-check-circle"></i>
-            <div class="info_list_block">
-              <p class="text_todo">fix</p>
-              <p>Time to complete 2:00 h.</p>
-              <p>Time spend 1:00 h.</p>
-            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
-          </div>
-          <div class="single_list_block"><i class="far fa-check-circle"></i>
-            <div class="info_list_block">
-              <p class="text_todo">Learn some course</p>
-              <p>Time to complete 3:00 h.</p>
-              <p>Time spend 0:30 h.</p>
-            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
-          </div>
-          <div class="single_list_block"><i class="far fa-check-circle"></i>
-            <div class="info_list_block">
-              <p class="text_todo">import styles in main project</p>
-              <p>Time to complete 0:30 h.</p>
-              <p>Time spend 0:00 h.</p>
-            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
-          </div>
-          <div class="single_list_block"><i class="far fa-check-circle"></i>
-            <div class="info_list_block">
-              <p class="text_todo">fixed bug</p>
-              <p>Time to complete 3:00 h.</p>
-              <p>Time spend 1:30 h.</p>
-            </div><i class="fas fa-play-circle">     </i><i class="far fa-times-circle"></i>
-          </div>
+      <div class="single_list_block">
+        <i class="far fa-check-circle"></i>
+        <div class="info_list_block">
+          <p class="text_todo">fixed bug</p>
+          <p>Time to complete 3:00 h.</p>
+          <p>Time spend 3:30 h.</p>
+        </div>
+        <i class="fas fa-play-circle"> </i><i class="far fa-times-circle"></i>
+      </div>
+      <div class="single_list_block">
+        <i class="far fa-check-circle"></i>
+        <div class="info_list_block">
+          <p class="text_todo">fix</p>
+          <p>Time to complete 2:00 h.</p>
+          <p>Time spend 1:00 h.</p>
+        </div>
+        <i class="fas fa-play-circle"> </i><i class="far fa-times-circle"></i>
+      </div>
+      <div class="single_list_block">
+        <i class="far fa-check-circle"></i>
+        <div class="info_list_block">
+          <p class="text_todo">Learn some course</p>
+          <p>Time to complete 3:00 h.</p>
+          <p>Time spend 0:30 h.</p>
+        </div>
+        <i class="fas fa-play-circle"> </i><i class="far fa-times-circle"></i>
+      </div>
+      <div class="single_list_block">
+        <i class="far fa-check-circle"></i>
+        <div class="info_list_block">
+          <p class="text_todo">import styles in main project</p>
+          <p>Time to complete 0:30 h.</p>
+          <p>Time spend 0:00 h.</p>
+        </div>
+        <i class="fas fa-play-circle"> </i><i class="far fa-times-circle"></i>
+      </div>
+      <div class="single_list_block">
+        <i class="far fa-check-circle"></i>
+        <div class="info_list_block">
+          <p class="text_todo">fixed bug</p>
+          <p>Time to complete 3:00 h.</p>
+          <p>Time spend 1:30 h.</p>
+        </div>
+        <i class="fas fa-play-circle"> </i><i class="far fa-times-circle"></i>
+      </div>
     </div>
   </body>
 </html>
