--- a/toggl/src/components/TogglMain/TogglMain.scss
+++ b/toggl/src/components/TogglMain/TogglMain.scss
@@ -252,7 +252,7 @@ body {
   border: 1px solid $light_grey;
   border-radius: 10px;
   display: grid;
-  grid-template-columns: 1fr 5fr 2fr 2fr 1fr 1fr;
+  grid-template-columns: 1fr 5fr 2fr 3fr 1fr;
   padding: 20px;
   margin-top: 20px;
 }
