--- a/toggl/src/components/Timer/Timer.scss
+++ b/toggl/src/components/Timer/Timer.scss
@@ -16,7 +16,7 @@ $orange: #ff7400;
 }
 
 .timer a:nth-child(2) i {
-  color: $green;
+  color: #299000;
 }
 
 .timer a:nth-child(2) i:hover {
@@ -28,5 +28,5 @@ $orange: #ff7400;
 }
 
 .timer a:last-child i:hover {
-  color: $green;
+  color: #299000;
 }
