--- a/toggl/src/components/TogglMain/TogglMain.scss
+++ b/toggl/src/components/TogglMain/TogglMain.scss
@@ -257,6 +257,10 @@ body {
   margin-top: 20px;
 }
 
+.single_list_block p {
+  font-size: 18px;
+}
+
 .complete {
   background-color: $green;
   border-radius: 10px;
